--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ timezone: Asia/Seoul
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Chirpy # the main title
+title: 윤재박의 깃허브 블로그 # the main title
 
 tagline: A text-focused Jekyll theme # it will display as the sub-title
 
@@ -26,7 +26,7 @@ description: >- # used by seo meta and the atom feed
 url: 'https://yoonjaepark3908.github.io'
 
 github:
-  username: github_username # change to your github username
+  username: YoonJaePark3908 # change to your github username
 
 twitter:
   username: twitter_username # change to your twitter username
