--- a/_config.yml
+++ b/_config.yml
@@ -16,10 +16,10 @@ timezone: Asia/Seoul
 
 title: 윤재박의 블로그 # the main title
 
-tagline: 개발 지식 저장을 위한 블로그입니다. # it will display as the sub-title
+tagline: 개발 지식 기록을 위한 블로그입니다. # it will display as the sub-title
 
 description: >- # used by seo meta and the atom feed
-  개발 지식 저장을 위한 블로그입니다.
+  개발 지식 기록을 위한 블로그입니다.
 
 # Fill in the protocol & hostname for your site.
 # e.g. 'https://username.github.io', note that it does not end with a '/'.
