--- a/_config.yml
+++ b/_config.yml
@@ -44,7 +44,7 @@ social:
     # - https://www.facebook.com/username
     - https://www.linkedin.com/in/jaepark-yoon-6b9028277
 
-google_site_verification: nyaselxLsC7IQAlyF7WVDqbnjz-PqcO6O1fD9KS3ky8
+google_site_verification: 'nyaselxLsC7IQAlyF7WVDqbnjz-PqcO6O1fD9KS3ky8'
 
 # ↑ --------------------------
 # The end of `jekyll-seo-tag` settings
